Work on Css/Jquery Animation; alignment fixes

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,9 @@
 .title-bar {
   background-color: #74CFEC;
   color: #F2F2F3;
-  padding: 15px 10px 0 10px;
+  padding-top:  10px ;
+  padding-bottom:  10px;
   box-shadow: 1px 1px 2px 1px #B0B0B0;
-  margin-bottom: 5px;
 }
 .header-bar {
   height: 100%;
