--- a/src/app/purchase/purchase.component.scss
+++ b/src/app/purchase/purchase.component.scss
@@ -1,5 +1,5 @@
 // setup:
-
+/*
 $black: #191919;
 $white: #FFF;
 $pear: #D6D35D;
@@ -128,4 +128,17 @@ h1 {
       }
     }
   }
+}*/
+// Mixin itself
+@mixin clearfix() {
+  &::after {
+    display: block;
+    content: "";
+    clear: both;
+  }
+}
+
+// Usage as a mixin
+.element {
+  @include clearfix;
 }
